--- a/ui/inspectors/system-section.reel/mail.reel/mail.html
+++ b/ui/inspectors/system-section.reel/mail.reel/mail.html
@@ -68,19 +68,11 @@
         "serialPortOptionConverter": {
             "prototype": "core/converter/select-option-converter"
         },
-        "mailEncryptionTypeconverter": {
-            "prototype": "core/converter/select-option-converter",
-            "properties": {
-                "labelPropertyName": "this",
-                "valuePropertyName": "this"
-            }
-        },
         "encryption": {
             "prototype": "blue-shark/ui/field-select.reel",
             "properties": {
                 "element": {"#": "encryption"},
-                "label": "TLS/SSL",
-                "converter": {"@": "mailEncryptionTypeconverter"}
+                "label": "TLS/SSL"
             },
             "bindings": {
                 "options" : {"<-": "@owner.encryptionOptions"},
