--- a/ui/dashboard/notifications.reel/notifications.html
+++ b/ui/dashboard/notifications.reel/notifications.html
@@ -17,7 +17,7 @@
                 "isSelectionEnabled": true
             },
             "bindings": {
-                "content": {"<-": "@owner.notificationCenter.notifications.filter{type == @owner.type && !taskReport.parent.defined()}"}
+                "content": {"<-": "@owner.notificationCenter.notifications.filter{(!data.defined() || (data.active && !data.dismissed)) && type == @owner.type && !taskReport.parent.defined()}"}
             }
         },
         "item": {
