--- a/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
+++ b/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
@@ -102,7 +102,7 @@
             }
         },
         "settings": {
-            "prototype": "ui/inspectors/volume-dataset-settings.reel",
+            "prototype": "./volume-dataset-settings.reel",
             "properties": {
                 "element": {"#": "settings"}
             },
