Fix snapshot dataset selection
Ticket: #18558

--- a/ui/sections/storage/inspectors/snapshot.reel/snapshot.html
+++ b/ui/sections/storage/inspectors/snapshot.reel/snapshot.html
@@ -82,10 +82,8 @@
             "prototype": "ui/controls/field-treeview.reel",
             "properties": {
                 "element": {"#": "datasetSelector"},
-                "validationPath": "dataset",
                 "controller": {"@": "datasetTreeController"},
-                "label": "Dataset",
-                "removePrefix": "/mnt/"
+                "label": "Dataset"
             },
             "bindings": {
                 "selectedPath": {"<->": "@owner.object.dataset"}
