--- a/ui/inspectors/calendar-task.reel/smart-args.reel/smart-args.html
+++ b/ui/inspectors/calendar-task.reel/smart-args.reel/smart-args.html
@@ -33,11 +33,10 @@
             "prototype": "blue-shark/ui/field-select.reel",
             "properties": {
                 "element": {"#": "type"},
-                "label": "Test type",
-                "converter": {"@": "optionConverter"}
+                "label": "Test type"
             },
             "bindings": {
-                "options": {"<-": "@owner.testTypes.map{.toLowerCase()}"},
+                "options": {"<-": "@owner.testTypes"},
                 "selectedValue": {"<->": "@owner.args.1"}
             }
         }
