commit updates size-cell binding

--- a/ui/inspectors/system-section.reel/boot-pool.reel/size-cell.reel/size-cell.html
+++ b/ui/inspectors/system-section.reel/boot-pool.reel/size-cell.reel/size-cell.html
@@ -20,7 +20,7 @@
                 "converter": {"@": "bytesSizeConverter"}
             },
             "bindings": {
-                "value": {"<-": "@owner.object.path(@owner.context.expression)"}
+                "value": {"<-": "@owner.value"}
             }
         }
     }
