--- a/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
+++ b/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
@@ -16,7 +16,8 @@
                 "_environmentComponent": {"@": "environmentsTable"}
             },
             "bindings": {
-                "currentTemplate": {"<-": "@imageSearch.currentPreset"},
+                "currentTemplate": {"<-": "@imageSearch.selectedValue.presets"},
+                "object.image": {"<-": "@imageSearch.selectedValue.name"},
                 "_availablesDockers": {"<-": "@owner._hostDockers.map{{label: name, value: id}}"},
                 "object.interactive": {"<-": "@owner.currentTemplate.interactive"},
                 "object.expose_ports": {"<-": "!!@owner.currentTemplate.expose_ports"},
@@ -55,8 +56,7 @@
             },
             "bindings": {
                 "_sectionService": {"<-": "@owner._sectionService"},
-                "collectionValue": {"<-": "@owner.defaultCollection"},
-                "imageComponent.selectedValue": {"<->": "@owner.object.image"}
+                "collectionValue": {"<-": "@owner.defaultCollection"}
             }
         },
 
