--- a/ui/sections/network/controls/table-routes.reel/table-row-route.reel/table-row-route.html
+++ b/ui/sections/network/controls/table-routes.reel/table-row-route.reel/table-row-route.html
@@ -17,7 +17,8 @@
                 "placeholder": "e.g. local"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.id"}
+                "value": {"<->": "@owner.object.id"},
+                "disabled": {"<-": "@owner.object.disableId"}
             }
         },
 
