gives margin to container image table

--- a/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
+++ b/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
@@ -227,7 +227,7 @@
 <body>
     <div data-montage-id="owner" class="ContainerCreator">
         <div data-montage-id="inspector">
-            <div data-montage-id="imageSearch"></div>
+            <div data-montage-id="imageSearch" class="g-margin-bottom--double"></div>
             <div data-montage-id="name"></div>
             <div data-montage-id="dockerHost"></div>
 
