--- a/ui/inspectors/service.reel/ups-service.reel/ups-service.html
+++ b/ui/inspectors/service.reel/ups-service.reel/ups-service.html
@@ -9,12 +9,205 @@
             "properties": {
                 "element": {"#": "owner"}
             }
+        },
+        "mode": {
+            "prototype": "blue-shark/ui/field-select.reel",
+            "properties": {
+                "element": {"#": "mode"},
+                "label": "UPS Mode"
+            },
+            "bindings": {
+                "options" : {"<-": "@owner.modeOptions"},
+                "selectedValue": {"<->": "@owner.object.mode"}
+            }
+        },
+        "identifier": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "identifier"},
+                "label": "Identifier"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.identifier"}
+            }
+        },
+        "driver": {
+            "prototype": "blue-shark/ui/field-select.reel",
+            "properties": {
+                "element": {"#": "driver"},
+                "label": "driver"
+            },
+            "bindings": {
+                "options" : {"<-": "@owner.driverOptions"},
+                "selectedValue": {"<->": "@owner.object.driver"}
+            }
+        },
+        "driver_port": {
+            "prototype": "blue-shark/ui/field-select.reel",
+            "properties": {
+                "element": {"#": "driver_port"},
+                "label": "Driver Port"
+            },
+            "bindings": {
+                "options" : {"<-": "@owner.driverPortOptions"},
+                "selectedValue": {"<->": "@owner.object.driver_port"}
+            }
+        },
+        "remote_host": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "remote_host"},
+                "label": "Remote Host"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.remote_host"}
+            }
+        },
+        "remote_port": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "remote_port"},
+                "label": "remote port"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.remote_port"}
+            }
+        },
+        "description": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "description"},
+                "label": "description"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.description"}
+            }
+        },
+        "shutdown_mode": {
+            "prototype": "blue-shark/ui/field-select.reel",
+            "properties": {
+                "element": {"#": "shutdown_mode"},
+                "label": "shutdown_mode"
+            },
+            "bindings": {
+                "options" : {"<-": "@owner.shutdownModeOptions"},
+                "selectedValue": {"<->": "@owner.object.shutdown_mode"}
+            }
+        },
+        "shutdown_timer": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "shutdown_timer"},
+                "label": "shutdown timer"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.shutdown_timer"}
+            }
+        },
+        "monitor_user": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "monitor_user"},
+                "label": "monitor user"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.monitor_user"}
+            }
+        },
+        "monitor_password": {
+            "prototype": "blue-shark/ui/field-password-input.reel",
+            "properties": {
+                "element": {"#": "monitor_password"},
+                "label": "Password",
+                "placeholder": "monitor password"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.monitor_password"}
+            }
+        },
+        "auxiliary_users": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "auxiliary_users"},
+                "label": "auxiliary_users"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.auxiliary_users"}
+            }
+        },
+        "monitor_remote": {
+            "prototype": "blue-shark/ui/field-checkbox.reel",
+            "properties": {
+                "element": {"#": "monitor_remote"},
+                "label": "Monitor Remote"
+            },
+            "bindings": {
+                "checked": {"<->": "@owner.object.monitor_remote"}
+            }
+        },
+        "email_notify": {
+            "prototype": "blue-shark/ui/field-checkbox.reel",
+            "properties": {
+                "element": {"#": "email_notify"},
+                "label": "Send Email Status Updates"
+            },
+            "bindings": {
+                "checked": {"<->": "@owner.object.email_notify"}
+            }
+        },
+        "email_recipients": {
+            "prototype": "blue-shark/ui/field-multiple-select.reel",
+            "properties": {
+                "element": {"#": "email_recipients"},
+                "label": "email recipients",
+                "labelPath": "this"
+            },
+            "bindings": {
+                "values": {"<->": "@owner.object.email_recipients"}
+            }
+        },
+        "email_subject": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "email_subject"},
+                "label": "Email Subject"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object.email_subject"}
+            }
+        },
+        "powerdown": {
+            "prototype": "blue-shark/ui/field-checkbox.reel",
+            "properties": {
+                "element": {"#": "powerdown"},
+                "label": "Power Off UPS"
+            },
+            "bindings": {
+                "checked": {"<->": "@owner.object.powerdown"}
+            }
         }
     }
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="UpsService">
+    <div data-montage-id="owner" class="Ups">
+        <div data-montage-id="mode"></div>
+        <div data-montage-id="identifier"></div>
+        <div data-montage-id="driver"></div>
+        <div data-montage-id="driver_port"></div>
+        <div data-montage-id="description"></div>
+        <div data-montage-id="shutdown_mode"></div>
+        <div data-montage-id="shutdown_timer"></div>
+        <div data-montage-id="auxiliary_users"></div>
+        <div data-montage-id="monitor_remote"></div>
+        <div data-montage-id="monitor_user"></div>
+        <div data-montage-id="monitor_password"></div>
+        <div data-montage-id="remote_host"></div>
+        <div data-montage-id="remote_port"></div>
+        <div data-montage-id="email_notify"></div>
+        <div data-montage-id="email_recipients"></div>
+        <div data-montage-id="email_subject"></div>
+        <div data-montage-id="powerdown"></div>
     </div>
 </body>
 </html>
