--- a/ui/sections/containers/inspectors/settings.reel/settings.html
+++ b/ui/sections/containers/inspectors/settings.reel/settings.html
@@ -36,7 +36,7 @@
                 "label": "Default Docker Collection"
             },
             "bindings": {
-                "value": {"<->": "@owner.defaultCollection"}
+                "value": {"<->": "@owner.object.settings.default_collection"}
             }
         },
 
