--- a/ui/sections/storage/inspectors/volume-creator.reel/volume-creator.html
+++ b/ui/sections/storage/inspectors/volume-creator.reel/volume-creator.html
@@ -49,6 +49,60 @@
                 "value": {"<->": "@owner.object.id"}
             }
         },
+        
+        "encryption": {
+            "prototype": "blue-shark/ui/field-checkbox.reel",
+            "properties": {
+                "element": {"#": "encryption"},
+                "label": "Encrypt volume ?"
+            },
+            "bindings": {
+                "checked": {"<->": "@owner.object._isEncrypted"}
+            }
+        },
+
+        "encryptionOptions": {
+            "prototype": "montage/ui/condition.reel",
+            "properties": {
+                "element": {"#": "encryptionOptions"}
+            },
+            "bindings": {
+                "condition": {"<-": "@encryption.checked"}
+            }
+        },
+
+        "auto_unlock": {
+            "prototype": "blue-shark/ui/field-checkbox.reel",
+            "properties": {
+                "element": {"#": "auto_unlock"},
+                "label": "Auto unlock ?"
+            },
+            "bindings": {
+                "checked": {"<->": "@owner.object.auto_unlock"}
+            }
+        },
+
+        "key_encrypted": {
+            "prototype": "blue-shark/ui/field-checkbox.reel",
+            "properties": {
+                "element": {"#": "key_encrypted"},
+                "label": "Key encrypt ?"
+            },
+            "bindings": {
+                "checked": {"<->": "@owner.object.key_encrypted"}
+            }
+        },
+
+        "password": {
+            "prototype": "blue-shark/ui/field-password.reel",
+            "properties": {
+                "element": {"#": "password"},
+                "label": "Password"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.object._password"}
+            }
+        },
 
         "topologizer": {
             "prototype": "ui/controls/topologizer.reel",
@@ -92,6 +146,12 @@
             <div class="VolumeCreator-content">
                 <div class="g-margin-sides g-padding-top">
                     <div data-montage-id="name"></div>
+                    <div data-montage-id="encryption"></div>
+                    <div data-montage-id="encryptionOptions">
+                        <div data-montage-id="auto_unlock"></div>
+                        <div data-montage-id="key_encrypted"></div>
+                        <div data-montage-id="password"></div>
+                    </div>
                 </div>
                 <div data-montage-id="topologizer"></div>
                 <div data-montage-id="topology" class="VolumeCreator-Topology"></div>
