--- a/ui/sections/storage/inspectors/available-disks.reel/disks-category.reel/disks-category.html
+++ b/ui/sections/storage/inspectors/available-disks.reel/disks-category.reel/disks-category.html
@@ -32,7 +32,7 @@
                 "element": {"#": "grid"},
                 "controller": {"@": "controller"},
                 "labelPath": "name",
-                "itemDraggable": "true"
+                "itemDraggable": true
             },
             "bindings": {
                 "icon": {"<-": "@owner.icon"},
