--- a/ui/sections/storage/inspectors/encrypted-volume-importer.reel/encrypted-volume-importer.html
+++ b/ui/sections/storage/inspectors/encrypted-volume-importer.reel/encrypted-volume-importer.html
@@ -63,20 +63,20 @@
             }
         },
         "disks": {
-            "prototype": "blue-shark/ui/field-select-multiple.reel",
+            "prototype": "ui/controls/disk-selector.reel",
             "properties": {
                 "element": {"#": "disks"},
-                "label": "Disks"
+                "name": "Disks"
             },
             "bindings": {
-                "options": {"<-": "@owner.availableDisks.map{path}"},
-                "selectedValues": {"<->": "@owner.object.disks"}
+                "disks": {"<->": "@owner.object.disks"}
             }
         },
         "availableDisks": {
             "prototype": "ui/sections/storage/inspectors/available-disks.reel",
             "properties": {
-                "element": {"#": "availableDisks"}
+                "element": {"#": "availableDisks"},
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "disks": {"<-": "@owner.availableDisks"}
@@ -89,13 +89,15 @@
     <div data-montage-id="owner" class="EncryptedVolumeImporter has-availableDisks">
         <div data-montage-id="inspector">
             <div class="EncryptedVolumeImporter-content">
-                <div data-montage-id="name"></div>
-                <div data-montage-id="password"></div>
-                <div data-montage-id="key"></div>
-                <div data-montage-id="disks"></div>
+                <div class="g-margin-sides g-padding-top">
+                    <div data-montage-id="name"></div>
+                    <div data-montage-id="password"></div>
+                    <div data-montage-id="key"></div>
+                </div>
+                <div data-montage-id="disks" class="EncryptedVolumeImporter-disks"></div>
             </div>
         </div>
-        <div class="EncryptedVolumeImporter-sidebar hide">
+        <div class="EncryptedVolumeImporter-sidebar">
             <div data-montage-id="availableDisks"></div>
         </div>
     </div>
